# quantette

./: Cargo.toml  Changelog.md  LICENSE-MIT  README.md  clippy.toml  flake.nix  justfile  rust-toolchain.toml  typos.toml
.github/: dependabot.yml
.github/workflows/: check.yml  scheduled.yml  test.yml
benches/: color_space.rs  dedup.rs  dither.rs  kmeans.rs  nearest_neighbor.rs  pipeline.rs  wu.rs
docs/: Benchmarks and Accuracy.md  Examples.md
examples/: accuracy.rs  cli.rs
examples/plot/: freq.gnuplot  main.rs  palette.gnuplot
img/CQ100/: README.md
img/unsplash/: README.md
scripts/: benchmarks.nu  examples.nu
src/: color_space.rs  deps.rs  dither.rs  lib.rs  traits.rs
src/api/: mod.rs  palette_color_space.rs  pipeline.rs  quantize_method.rs
src/color_map/: mod.rs  nearest_neighbor.rs  palette_substitution.rs
src/quantize/: dedup.rs  kmeans.rs  mod.rs
src/quantize/wu/: f32.rs  mod.rs  shared.rs  u8.rs
src/types/: bounded.rs  error.rs  image.rs  indexed_image.rs  mod.rs  palette.rs  palette_counts.rs
util/: mod.rs
